// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea Component when is required matches the snapshot 1`] = `
Array [
  <div
    className="bcgov-input-label"
  >
    <label
      htmlFor="1"
    >
      some label
    </label>
    <span
      className="bcgov-mandatory"
      id="asterisk"
    >
      *
    </span>
     
  </div>,
  <textarea
    className="bcgov-text-input"
    cols="60"
    id="1"
    onChange={[Function]}
    rows="8"
  />,
]
`;

exports[`Textarea Component with label matches the snapshot 1`] = `
Array [
  <div
    className="bcgov-input-label"
  >
    <label
      htmlFor="1"
    >
      some label
    </label>
    
     
  </div>,
  <textarea
    className="bcgov-text-input"
    cols="60"
    id="1"
    onChange={[Function]}
    rows="8"
  />,
]
`;

exports[`Textarea Component without label matches the snapshot 1`] = `
Array [
  "",
  <textarea
    className="bcgov-text-input"
    cols="60"
    id="1"
    onChange={[Function]}
    rows="8"
  />,
]
`;
